--- a/modulo3/exs/ex023/tabela001.html
+++ b/modulo3/exs/ex023/tabela001.html
@@ -12,16 +12,19 @@
 
         table{
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
-        }
-
-        tr{
-            
         }
 
         td{
             border: 1px solid black;
             padding: 8px;
+            text-align: center;
+            
+        }
+
+        .numero{
+            text-align: right;
         }
     </style>
 </head>
@@ -47,8 +50,8 @@
             <td>C2</td>
         </tr>
         <tr>
-            <td>A3</td>
-            <td>B3</td>
+            <td class="numero">A3</td>
+            <td class="numero">B3</td>
             <td>C3</td>
         </tr>
         <tr>
