--- a/modulo3/exs/ex023/tabela002.html
+++ b/modulo3/exs/ex023/tabela002.html
@@ -12,6 +12,7 @@
         table{
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
 
         td, th{
@@ -19,13 +20,32 @@
             padding: 10px;
         }
 
+        tbody > tr:nth-child(odd){
+            background-color: lightgray;
+        }
+
+
         td.num{
             text-align: right;
+            width: 100px;
+        }
+
+        caption{
+            font-size: 1.5em;
+            font-weight: bold;
+            padding: 10px;
+            background-color: lightgray;
         }
 
         thead, tfoot{
             background-color: gray;
             color: white;
+        }
+
+        thead > tr > th{
+            position: sticky;
+            top: -1px;
+            background-color: gray
         }
     </style>
 </head>
@@ -33,6 +53,7 @@
     <h1>Usos de tabelas grandes</h1>
     <!--anatomia para tabelas grandes
     table
+        captton
         thead
             tr,td,th
         tbody
@@ -41,10 +62,11 @@
             tr,td,th
     -->
     <table>
+        <caption>População das Unidades Federativas</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col">População</th>
             </tr>
         </thead>
         <tbody>
@@ -159,7 +181,7 @@
         </tbody>
         <tfoot>
             <tr>
-                <th>Total de Habitantes</th>
+                <th scope="row">Total de Habitantes</th>
                 <td class="num"><strong>203 062 512</strong></td>
             </tr>
         </tfoot>
