--- a/modulo4/exs/ex024/iframe003.html
+++ b/modulo4/exs/ex024/iframe003.html
@@ -13,6 +13,7 @@
             width:95vw ;
             border: 2px solid black;
             height: 400px;
+            border-radius: 10px;
         }
     </style>
 </head>
