--- a/modulo4/d/d1/index.html
+++ b/modulo4/d/d1/index.html
@@ -10,17 +10,21 @@
 <body>
     <main>
         <section id="telefone">
-            <!<img src="imagens/frame-iphone.png" alt="iphone">
+            <iframe src="1home.html" name="tela"
+            id="tela" frameborder="0"></iframe>
         </section>
         <section id="redes-sociais">
-            <ul>
-                <li><img src="imagens/logo-home.jpg" alt=""></li>
-                <li><img src="imagens/logo-youtube.jpg" alt=""></li>
-                <li><img src="imagens/logo-github.jpg" alt=""></li>
-                <li><img src="imagens/logo-instagram.jpg" alt=""></li>
-                <li><img src="imagens/logo-twitter.jpg" alt=""></li>
-                <li><img src="imagens/logo-facebook.jpg" alt="facebook"></li>
-            </ul>-->
+            <a href="1home.html" target="tela"><img src="imagens/logo-home.jpg" alt=""></a> <br>
+
+            <a href="2yt.html" target="tela"><img src="imagens/logo-youtube.jpg" alt=""></a> <br>
+
+            <a href="3git.html" target="tela"><img src="imagens/logo-github.jpg" alt=""></a> <br>
+
+            <a href="4insta.html" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a> <br>
+
+            <a href="5tw.html" target="tela"><img src="imagens/logo-twitter.jpg" alt=""></a> <br>
+
+            <a href="6facbook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a>
         </section>
     </main>
 </body>
