--- a/modulo4/exs/ex025/form007.html
+++ b/modulo4/exs/ex025/form007.html
@@ -8,7 +8,7 @@
 <body>
     
     <h1>Exemplos de Formulário</h1>
-    <form action="cadastro.php">
+    <form action="cadastro.php" method="post" autocomplete="on">
         <p>
             <label for="iset">Estado</label>
             <select name="estado" id="iest">
@@ -27,7 +27,21 @@
             </select>
         </p>
 
+        <p>
+            <label for="iprof">Profissão</label>
+            <input type="text" name="prof" id="iprof" list="lstprof">
+            <datalist id="lstprof">
+                <option value="ADM">Administrador</option>
+                <option value="CONT">Contabilista</option>
+                <option value="DEV">Desenvolvedor</option>
+                <option value="PROF">Professor</option>
+            </datalist>
+        </p>
 
+        <p>
+          <label for="imsg">Mensagem</label> <br> 
+          <textarea name="msg" id="imsg" cols="30" rows="10" placeholder="Sua Mensagem aqui..."></textarea>
+        </p>
         
         <p>
             <input type="submit" value="Cadastrar">
